# rpm-plugin-filechange

./: README.md  meson.build  meson.options  rpm.spec
.github/workflows/: build.yml
macros/: macros.in  meson.build
src/: config.h.in  filechange.c  meson.build
